Minimal loader implementation with mixins