@@ -1,5 +1,16 @@
-# Avrix 2.0
+# Avrix 2.0.0
 
 In development =)
 
 Coming soon...
+
+## How to start
+
+```bash
+java "-Djdk.attach.allowAttachSelf=true" -XX:+EnableDynamicAgentLoading -jar Avrix-Loader-X.X.X.jar
+```
+
+Optional launch parameters:
+
+- ```-no-redirect-log```
+- ```-nosteam```
